--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <!-- MAP HERE -->
         <div id="map" class="map"></div>
 
+        <!--HERE'S HOW YOU CALL JS FUNCTIONS HERE IN THE HTML FILE -->
+        <button onclick="panHome ()>"pan back home!!! plessss</button>
+       <button onclick="PanToLocation()>"
 
 
         <!-- FOOTER -->
@@ -22,4 +25,14 @@
             <p>This is a <a href="#">tutorial</a> for y'all, don't forget y'all</p>
         </footer>
     </body>
+   
 </html>
+
+
+
+
+
+
+
+
+
